--- a/src/main/resources/templates/kassza/kosarlista.html
+++ b/src/main/resources/templates/kassza/kosarlista.html
@@ -5,6 +5,9 @@
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Bootstrap Font Icon CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
+    <link href='https://css.gg/enter.css' rel='stylesheet'>
     <style>
         .button-76 {
             border-radius: 8px;
@@ -26,7 +29,8 @@
             -webkit-user-select: none;
             touch-action: manipulation;
         }
-        .button-76:disabled{
+
+        .button-76:disabled {
             background-color: whitesmoke;
         }
 
@@ -42,8 +46,9 @@
                 line-height: 2rem; /* 32px */
             }
         }
-        h1{
-           background-color: darkblue;
+
+        h1 {
+            background-color: darkblue;
             padding: 20px;
             color: whitesmoke;
             text-align: center;
@@ -51,9 +56,9 @@
     </style>
 
     <script>
-            setTimeout(function () {
-                document.getElementById("send").submit();
-            }, 500);
+        setTimeout(function () {
+            document.getElementById("send").submit();
+        }, 5000);
     </script>
 </head>
 <body>
@@ -82,20 +87,30 @@
             th:text="${termekmennyiseg.mennyiseg*termekmennyiseg.ar} + ' Ft'">
             Mennyiség
         </th>
-        <th style="width: 100px" scope="col"></th>
+        <div th:if="${kosar.hitelesites == T(hu.progmatic.kozos.kassza.Hitelesites).NINCS_HITELESITVE && termekmennyiseg.hitelesitesSzukseges}">
+            <th style="width: 100px; background-color: #ff8c00; text-align: center" scope="col">
+                <i class="bi bi-exclamation-triangle" style="color: white"></i>
+            </th>
+        </div>
+        <div th:if="${kosar.hitelesites == T(hu.progmatic.kozos.kassza.Hitelesites).HITELESITVE && termekmennyiseg.hitelesitesSzukseges}">
+            <th style="width: 100px; background-color: #778899; text-align: center" scope="col">
+                <i class="bi bi-exclamation-triangle" style="color: white"></i>
+            </th>
+        </div>
     </tr>
 
 
     </tbody>
 </table>
 
-    <form th:action="@{/}" style="padding-top: 2%">
-        <div id="back-button" class="position-relative" style="text-align: center">
-            <button class="button-76" style="position: fixed; bottom: 0; width: 400px; left: 550px;" type="submit">VISSZA</button>
-        </div>
-    </form>
-    <form th:action="@{'/kassza/kosarlista'}" id="send" method="get">
-        <input type="submit">
-    </form>
+<form th:action="@{/}" style="padding-top: 2%">
+    <div id="back-button" class="position-relative" style="text-align: center">
+        <button class="button-76" style="position: fixed; bottom: 0; width: 400px; left: 550px;" type="submit">VISSZA
+        </button>
+    </div>
+</form>
+<form th:action="@{'/kassza/kosarlista'}" id="send" method="get">
+    <input type="submit">
+</form>
 </body>
 </html>
