--- a/src/main/resources/templates/kassza/raktar.html
+++ b/src/main/resources/templates/kassza/raktar.html
@@ -114,7 +114,7 @@
                 <img style="width: 40px; height: 40px" src="istockphoto-1206806317-170667a.jpg"
                      th:if="${item.kep!=null}" th:src="@{'/kassza/raktar/{id}/kep'(id=${item.id})}">
             </td>
-            <td th:text="${item.hitelesitesSzukseges}">Tipus</td>
+            <td th:text="${item.hitelesitesSzukseges} ? 'Igen' : 'Nem'">Tipus</td>
             <td>
                 <form style="text-align: right" th:action="@{'/kassza/raktar/{id}'(id=${item.id})}" method="get">
                     <input type="submit" class="btn btn-success edit-btn" value="Módosít"/>
