--- a/src/main/resources/templates/kassza/bankjegyleltar.html
+++ b/src/main/resources/templates/kassza/bankjegyleltar.html
@@ -63,7 +63,7 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 <div class="list-group">
-    <table class="table table-striped">
+    <table class="table table-striped" style="table-layout: fixed; width: 2100px">
         <thead>
         <tr>
             <th scope="col">Id</th>
@@ -76,13 +76,40 @@
         <tr th:each="item : ${allBankjegy}">
             <th scope="row" th:text="${item.id}">0</th>
             <td th:text="${item.ertek}">Bankjegy</td>
-            <td th:text="${item.mennyiseg}">Mennyiseg</td>
-            <td>
-                <form style="text-align: right" th:action="@{'/kassza/bankjegyleltar/{id}'(id=${item.id})}"
+            <td th:if="${formItem.id == null || formItem.id != item.id}">
+                <form  th:action="@{'/kassza/bankjegyleltar/{id}'(id=${item.id})}"
                       method="get">
-                    <input type="submit" class="btn btn-success edit-btn" value="Módosít"/>
+                    <label th:text="${item.mennyiseg}" style="float:left"></label>
+                    <label style="float:right">
+                        <input type="submit" class="btn btn-success edit-btn" value="Módosít"/>
+                    </label>
                 </form>
             </td>
+
+            <td th:if="${formItem.id != null && formItem.id == item.id}">
+                <form  th:action="@{'/kassza/bankjegyleltar/{id}'(id=${item.id})}"
+                      method="post" th:object="${formItem}">
+                    <label style="float:left;  width: 130px">
+                        <input type="number"
+
+                               maxlength="3"
+                               class="form-control"
+                               placeholder="Mennyiseg"
+                               th:field="*{mennyiseg}"
+                               th:classappend="${#fields.hasErrors('mennyiseg')} ? 'is-invalid' : 'is-valid'"
+                               th:if="${formItem.id != null}"/>
+                        <div class="invalid-feedback"
+                             th:if="${#fields.hasErrors('mennyiseg')}"
+                             th:errors="*{mennyiseg}">
+                            Hibaüzenet
+                        </div>
+                    </label>
+                    <label style="float:right">
+                        <input type="submit" class="btn btn-success edit-btn" value="Ok"/>
+                    </label>
+                </form>
+            </td>
+
         </tr>
         </tbody>
     </table>
@@ -110,7 +137,9 @@
         </label>
     </div>
     <div class="col">
-        <h3 th:text="${formItem.ertek}+' Ft-os bankjegy mennyiség szerkesztése:'" style="color:darkblue;background-color: whitesmoke; position: fixed; left: 0" th:hidden="${formItem.id == null}"></h3>
+        <h3 th:text="${formItem.ertek}+' Ft-os bankjegy mennyiség szerkesztése:'"
+            style="color:darkblue;background-color: whitesmoke; position: fixed; left: 0"
+            th:hidden="${formItem.id == null}"></h3>
         <input th:if="${formItem.id != null}" class="btn btn-primary" type="submit" value="Módosít"
                style="position: fixed; left: 70%"/>
     </div>
@@ -161,7 +190,8 @@
 </form>
 <form th:action="@{'/kassza/bankjegyleltar/clear'}" method="post" style="padding-top: 2%">
     <div class="position-relative" style="text-align: center">
-        <button class="button-76" style="position: fixed; bottom: 100px; width: 400px; left: 550px;" type="submit">KIÜRÍTÉS
+        <button class="button-76" style="position: fixed; bottom: 100px; width: 400px; left: 550px;" type="submit">
+            KIÜRÍTÉS
         </button>
     </div>
 </form>
