--- a/src/main/resources/templates/felhasznalo.html
+++ b/src/main/resources/templates/felhasznalo.html
@@ -10,12 +10,52 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>Közös projekt</title>
+    <style>
+        .button-76 {
+            border-radius: 8px;
+            bottom: 0;
+            right: 0;
+            background-color: whitesmoke;
+            border: 0;
+            border-radius: .25rem;
+            box-sizing: border-box;
+            color: #0ca3d2;
+            cursor: pointer;
+            font-family: Helvetica;
+            font-size: 1.125rem; /* 18px */
+            font-weight: 600;
+            line-height: 1.75rem; /* 28px */
+            padding: 1rem 1.25rem;
+            text-align: center;
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+        }
+
+        .button-76:disabled {
+            background-color: whitesmoke;
+        }
+
+        .button-76:hover:enabled {
+            background-color: #0ca3d2;
+            color: white;
+        }
+
+        @media (min-width: 1024px) {
+            .button-76 {
+                font-size: 1.5rem; /* 24px */
+                padding: 1rem 1.5rem;
+                line-height: 2rem; /* 32px */
+            }
+        }
+    </style>
 </head>
 <body>
+<h1 style="background-color: #0ca3d2; text-align: center; color: white">Felhasználók szerkesztése</h1>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-<table class="table table-dark table-striped" th:if="${hasUserReadRole}">
+<table class="table table-striped" th:if="${hasUserReadRole}">
     <thead>
     <tr>
         <th scope="col">Id</th>
@@ -35,7 +75,7 @@
         <td>
             <form th:if="${hasUserWriteRole}"
                   th:action="@{'/felhasznalo/modosit/{id}'(id=${felhasznalo.id})}" method="get">
-                <input type="submit" class="btn btn-danger" th:href="@{/felhasznalo}" value="Modosít"/>
+                <input type="submit" class="btn btn-primary" th:href="@{/felhasznalo}" value="Modosít"/>
             </form>
         </td>
         <td>
@@ -50,11 +90,16 @@
 </table>
 
 <hr>
-
+<br>
+<br>
+<br>
 <div th:if="${modositFelhasznalo.felhasznaloId == null}">
-    <h3 th:if="${hasUserWriteRole}">Új felhasználó létrehozása</h3>
+    <h3 th:if="${hasUserWriteRole}" style="text-align: center; color: darkblue">Új felhasználó létrehozása</h3>
+    <br>
+    <br>
+    <br>
     <form th:if="${hasUserWriteRole}"
-          th:action="@{/felhasznalo}" method="post" th:object="${ujFelhasznaloCommand}">
+          th:action="@{/felhasznalo}" method="post" th:object="${ujFelhasznaloCommand}" style="position: fixed; left: 300px; right: auto">
         <div class="form-row">
             <div th:if="${ujFelhasznaloError != null}"
                  class="alert alert-danger"
@@ -132,6 +177,12 @@
     </form>
 </div>
 
-<h3 th:text="'Bejelntkezett felhasználó id: ' + ${userId}">Felhasználó id: 2</h3>
+<form th:action="@{/}" style="padding-top: 2%">
+    <div id="back-button" class="position-relative" style="text-align: center">
+        <button class="button-76" style="position: fixed; bottom: 0; width: 400px; left: 550px;" type="submit">VISSZA
+        </button>
+    </div>
+</form>
+
 </body>
 </html>
