--- a/src/main/resources/templates/kassza/bankjegyleltar.html
+++ b/src/main/resources/templates/kassza/bankjegyleltar.html
@@ -25,7 +25,7 @@
             border: 0;
             border-radius: .25rem;
             box-sizing: border-box;
-            color: black;
+            color: #032e83;
             cursor: pointer;
             font-family: Helvetica;
             font-size: 1.125rem; /* 18px */
@@ -43,7 +43,7 @@
         }
 
         .button-76:hover:enabled {
-            background-color: darkblue;
+            background-color: #0ca3d2;
             color: white;
         }
 
@@ -57,13 +57,13 @@
     </style>
 </head>
 <body>
-<h1 style="text-align: center; background-color: whitesmoke; color: black; height: 55px; padding-top: 5px">Bankjegy
+<h1 style="text-align: center; background-color: #f7f8f8; color: #032e83; height: 55px; padding-top: 5px">Bankjegy
     leltár</h1>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 <div class="list-group">
-    <table class="table table-striped" style="table-layout: fixed; width: 2100px">
+    <table class="table table-striped" style="table-layout: fixed; width: 2030px">
         <thead>
         <tr>
             <th scope="col">Id</th>
@@ -81,7 +81,7 @@
                       method="get">
                     <label th:text="${item.mennyiseg}" style="float:left"></label>
                     <label style="float:right">
-                        <input type="submit" class="btn btn-success edit-btn" value="Módosít"/>
+                        <input type="submit" class="btn btn-primary edit-btn" value="Módosít"/>
                     </label>
                 </form>
             </td>
@@ -138,7 +138,7 @@
     </div>
     <div class="col">
         <h3 th:text="${formItem.ertek}+' Ft-os bankjegy mennyiség szerkesztése:'"
-            style="color:darkblue;background-color: whitesmoke; position: fixed; left: 0"
+            style="color:#032e83;background-color: whitesmoke; position: fixed; left: 0"
             th:hidden="${formItem.id == null}"></h3>
         <input th:if="${formItem.id != null}" class="btn btn-primary" type="submit" value="Módosít"
                style="position: fixed; left: 70%"/>
@@ -190,7 +190,7 @@
 </form>
 <form th:action="@{'/kassza/bankjegyleltar/clear'}" method="post" style="padding-top: 2%">
     <div class="position-relative" style="text-align: center">
-        <button class="button-76" style="position: fixed; bottom: 100px; width: 400px; left: 550px;" type="submit">
+        <button class="button-76" style="position: fixed; bottom: 0px; width: 400px; right: 0;" type="submit">
             KIÜRÍTÉS
         </button>
     </div>
