--- a/src/main/resources/templates/kassza/kosarlista.html
+++ b/src/main/resources/templates/kassza/kosarlista.html
@@ -55,6 +55,10 @@
         }
     </style>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+
     <script>
         setTimeout(function () {
             document.getElementById("send").submit();
@@ -64,7 +68,7 @@
 <body>
 <h1>Bentragadt Kosarak törlése</h1>
 
-<table class="list-group">
+<table class="table table-striped">
     <thead>
     <tr style="font-size: 30px;">
         <h3>Kosár tartalma:</h3></tr>
