--- a/src/main/resources/templates/kassza/raktar.html
+++ b/src/main/resources/templates/kassza/raktar.html
@@ -9,6 +9,7 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Raktár</title>
     <style>
+
         .list-group {
             margin-bottom: 10px;
             overflow-y: scroll;
@@ -25,7 +26,7 @@
             border: 0;
             border-radius: .25rem;
             box-sizing: border-box;
-            color: black;
+            color: #0ca3d2;
             cursor: pointer;
             font-family: Helvetica;
             font-size: 1.125rem; /* 18px */
@@ -43,7 +44,7 @@
         }
 
         .button-76:hover:enabled {
-            background-color: darkblue;
+            background-color: #0ca3d2;
             color: white;
         }
 
@@ -85,7 +86,7 @@
     </script>
 </head>
 <body>
-<h1 style="text-align: center; background-color: whitesmoke; color: black; height: 55px; padding-top: 5px">Raktár</h1>
+<h1 style="text-align: center; background-color: #0ca3d2; color: white; height: 55px; padding-top: 5px">Raktár</h1>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
@@ -103,7 +104,7 @@
             <th scope="col"></th>
         </tr>
         </thead>
-        <tbody>
+        <tbody style="color: #404040">
         <tr th:each="item : ${allItem}">
             <th scope="row" th:text="${item.id}">0</th>
             <td th:text="${item.megnevezes}">Név</td>
@@ -117,7 +118,7 @@
             <td th:text="${item.hitelesitesSzukseges} ? 'Igen' : 'Nem'">Tipus</td>
             <td>
                 <form style="text-align: right" th:action="@{'/kassza/raktar/{id}'(id=${item.id})}" method="get">
-                    <input type="submit" class="btn btn-success edit-btn" value="Módosít"/>
+                    <input type="submit" class="btn btn-success edit-btn" style="background-color: #0ca3d2" value="Módosít"/>
                 </form>
             </td>
             <td>
