--- a/src/main/resources/templates/kassza/kosarlista.html
+++ b/src/main/resources/templates/kassza/kosarlista.html
@@ -35,7 +35,7 @@
         }
 
         .button-76:hover:enabled {
-            background-color: darkblue;
+            background-color: #0ea3e0;
             color: white;
         }
 
@@ -48,7 +48,7 @@
         }
 
         h1 {
-            background-color: darkblue;
+            background-color: #0ea3e0;
             padding: 20px;
             color: whitesmoke;
             text-align: center;
@@ -67,8 +67,9 @@
 </head>
 <body>
 <h1>Bentragadt Kosarak törlése</h1>
+<h2 th:text="'A kosár létrehozásának dátuma: ' + ${kosar.letrehozasDatuma}" th:hidden="${kosar.letrehozasDatuma == null}"></h2>
 
-<table class="table table-striped">
+<table class="table table-striped" th:hidden="${kosar.letrehozasDatuma == null}">
     <thead>
     <tr style="font-size: 30px;">
         <h3>Kosár tartalma:</h3></tr>
@@ -113,8 +114,8 @@
         </button>
     </div>
 </form>
-<form th:action="@{'/kassza/kosarlista'}" id="send" method="get">
-    <input type="submit">
+<form th:action="@{'/kassza/kosarlista'}" id="send" method="get" >
+    <input type="submit" hidden>
 </form>
 </body>
 </html>
